Experiment with test fanout

--- a/.azure-pipelines/auto.yml
+++ b/.azure-pipelines/auto.yml
@@ -126,6 +126,8 @@ jobs:
   pool:
     vmImage: macos-10.13
   steps:
+  - checkout: self
+    fetchDepth: 2
   - template: steps/macos.yml  
   strategy:
     matrix:
