--- a/.azure-pipelines/steps/macos.yml
+++ b/.azure-pipelines/steps/macos.yml
@@ -1,7 +1,4 @@
 steps:
-- checkout: self
-  fetchDepth: 2
-
 - template: show-disk-usage.yml
 
 - bash: |
@@ -15,8 +12,6 @@ steps:
     curl -fo /usr/local/bin/stamp https://s3-us-west-1.amazonaws.com/rust-lang-ci2/rust-ci-mirror/2017-03-17-stamp-x86_64-apple-darwin
     chmod +x /usr/local/bin/stamp
     
-    curl -f http://releases.llvm.org/7.0.0/clang+llvm-7.0.0-x86_64-apple-darwin.tar.xz | tar xJf - 
-    
     export CC=`pwd`/clang+llvm-7.0.0-x86_64-apple-darwin/bin/clang
     echo "##vso[task.setvariable variable=CC]$CC"
     
@@ -25,6 +20,13 @@ steps:
     
     echo "##vso[task.setvariable variable=AR]ar"
   displayName: Prep
+
+- bash: brew install gnu-tar
+  displayName: install a tar that works well
+
+- bash: |
+    curl -f http://releases.llvm.org/7.0.0/clang+llvm-7.0.0-x86_64-apple-darwin.tar.xz | tar xJf - 
+  displayName: Download clang
   
 - bash: |
     brew update
@@ -36,7 +38,7 @@ steps:
 - bash: |
     export RUN_SCRIPT="$BUILD_SOURCESDIRECTORY/src/ci/init_repo.sh . $HOME/rustsrc && src/ci/run.sh"
     echo "##vso[task.setvariable variable=RUN_SCRIPT]$RUN_SCRIPT"
-  displayName: Prepare run script
+  displayName: Prepare run script (init and run)
 
 - template: show-environment-variables.yml
 
