--- a/.azure-pipelines/auto.fanout.yml
+++ b/.azure-pipelines/auto.fanout.yml
@@ -16,6 +16,7 @@ variables:
 - group: caching
 
 jobs:
+# WINDOWS JOBS
 - job: Windows
   timeoutInMinutes: 600
   variables:
@@ -27,9 +28,6 @@ jobs:
   strategy:
     matrix:
       # 32/64 bit MSVC tests
-      x86_64-msvc:
-        MSYS_BITS: 64
-        RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
       x86_64-msvc-1:
         MSYS_BITS: 64
         RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
@@ -38,6 +36,7 @@ jobs:
         MSYS_BITS: 64
         RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
         SCRIPT: make ci-subset-2
+
 - job: Windows_build
   timeoutInMinutes: 600
   variables:
@@ -185,20 +184,20 @@ jobs:
       echo ##vso[task.setvariable variable=PATH]%PATH%
     displayName: Help debug handle issues
   - template: steps/show-environment-variables.yml
-  # - task: DownloadPipelineArtifact@1
-  #   inputs:
-  #     artifactName: $(ARTIFACT_NAME)
-  #     downloadPath: $(System.DefaultWorkingDirectory)
   - task: DownloadPipelineArtifact@1
     inputs:
       artifactName: $(ARTIFACT_NAME)
       downloadPath: $(System.DefaultWorkingDirectory)
-      buildType: specific
-      project: rust
-      pipeline: 8
-      buildVersionToDownload: specific
-      buildId: 164
-      # https://dev.azure.com/rust-lang-azure/rust/_build/results?buildId=145
+  # - task: DownloadPipelineArtifact@1
+  #   inputs:
+  #     artifactName: $(ARTIFACT_NAME)
+  #     downloadPath: $(System.DefaultWorkingDirectory)
+  #     buildType: specific
+  #     project: rust
+  #     pipeline: 8
+  #     buildVersionToDownload: specific
+  #     buildId: 180
+  #     # https://dev.azure.com/rust-lang-azure/rust/_build/results?buildId=145
 
   # - template: steps/macos.yml 
   - bash: $TAR_COMMAND -xf drop.tar
@@ -236,17 +235,38 @@ jobs:
   strategy:
     matrix:
       # 32/64 bit MSVC tests
-      x86_64-msvc-1:
+      x86_64-msvc-A:
         MSYS_BITS: 64
         RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
         ARTIFACT_NAME: x86_64-msvc-build
-        SCRIPT: make ci-subset-1
-      x86_64-msvc-2:
+        SCRIPT: make ci-subset-A
+      x86_64-msvc-B:
         MSYS_BITS: 64
         RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
         ARTIFACT_NAME: x86_64-msvc-build
-        SCRIPT: make ci-subset-2
+        SCRIPT: make ci-subset-B
+      x86_64-msvc-C:
+        MSYS_BITS: 64
+        RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
+        ARTIFACT_NAME: x86_64-msvc-build
+        SCRIPT: make ci-subset-C
+      x86_64-msvc-D:
+        MSYS_BITS: 64
+        RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
+        ARTIFACT_NAME: x86_64-msvc-build
+        SCRIPT: make ci-subset-D
+      x86_64-msvc-E:
+        MSYS_BITS: 64
+        RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
+        ARTIFACT_NAME: x86_64-msvc-build
+        SCRIPT: make ci-subset-E
+      x86_64-msvc-F:
+        MSYS_BITS: 64
+        RUST_CONFIGURE_ARGS: --build=x86_64-pc-windows-msvc --enable-profiler
+        ARTIFACT_NAME: x86_64-msvc-build
+        SCRIPT: make ci-subset-F
 
+# macOS JOBS
 - job: macOS
   timeoutInMinutes: 600
   variables:
@@ -439,3 +459,23 @@ jobs:
         NO_DEBUG_ASSERTIONS: 1
         ARTIFACT_NAME: x86_64-apple-build
         SCRIPT: make ci-resume-subset-D
+      x86_64-apple-E:
+        RUST_CHECK_TARGET: check
+        RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
+        RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+        MACOSX_DEPLOYMENT_TARGET: 10.8
+        MACOSX_STD_DEPLOYMENT_TARGET: 10.7
+        NO_LLVM_ASSERTIONS: 1
+        NO_DEBUG_ASSERTIONS: 1
+        ARTIFACT_NAME: x86_64-apple-build
+        SCRIPT: make ci-resume-subset-E
+      x86_64-apple-F:
+        RUST_CHECK_TARGET: check
+        RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
+        RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+        MACOSX_DEPLOYMENT_TARGET: 10.8
+        MACOSX_STD_DEPLOYMENT_TARGET: 10.7
+        NO_LLVM_ASSERTIONS: 1
+        NO_DEBUG_ASSERTIONS: 1
+        ARTIFACT_NAME: x86_64-apple-build
+        SCRIPT: make ci-resume-subset-F
