--- a/.azure-pipelines/auto.fanout.yml
+++ b/.azure-pipelines/auto.fanout.yml
@@ -183,6 +183,15 @@ jobs:
       handle.exe -accepteula -help
       echo ##vso[task.setvariable variable=PATH]%PATH%
     displayName: Help debug handle issues
+  
+  - script: |
+      IF NOT "%DISABLE_DISK_SPACE_HACK%"=="1" (
+        IF NOT EXIST build (
+          mkdir c:\MORE_SPACE
+          mklink /J build c:\MORE_SPACE
+        )
+      )
+    
   - template: steps/show-environment-variables.yml
   # - task: DownloadPipelineArtifact@1
   #   inputs:
@@ -214,8 +223,10 @@ jobs:
 
       REM echo hack as drive D is too small
       IF NOT "%DISABLE_DISK_SPACE_HACK%"=="1" (
-        mkdir c:\MORE_SPACE
-        mklink /J build c:\MORE_SPACE
+        IF NOT EXIST build (
+          mkdir c:\MORE_SPACE
+          mklink /J build c:\MORE_SPACE
+        )
       )
 
       if not exist D:\cache\rustsrc\NUL mkdir D:\cache\rustsrc
