--- a/.azure-pipelines/auto.fanout.yml
+++ b/.azure-pipelines/auto.fanout.yml
@@ -193,7 +193,7 @@ jobs:
       )
   - script: |
       echo on
-      echo "##vso[task.setvariable variable=TAR_FOLDER_PATH]%TEMP%"
+      echo ##vso[task.setvariable variable=TAR_FOLDER_PATH]%TEMP%
   - template: steps/show-environment-variables.yml
   # - task: DownloadPipelineArtifact@1
   #   inputs:
@@ -211,8 +211,8 @@ jobs:
       # https://dev.azure.com/rust-lang-azure/rust/_build/results?buildId=145
 
   # - template: steps/macos.yml 
-  - bash: $TAR_COMMAND -xf $TEMP/$ARTIFACT_NAME/drop.tar
-  - bash: rm -Rf ./$ARTIFACT_NAME
+  - bash: $TAR_COMMAND -xf $TEMP/drop.tar
+  - bash: rm ./drop.tar
   - script: |
       REM echo force the specific VS version https://github.com/johnterickson/rust/issues/8
       IF "%VCVARS_BAT%" NEQ "" ( 
@@ -383,8 +383,8 @@ jobs:
 
   # - template: steps/macos.yml 
   - template: steps/show-disk-usage.yml
-  - bash: $TAR_COMMAND -xf ./$ARTIFACT_NAME/drop.tar
-  - bash: rm -Rf ./$ARTIFACT_NAME
+  - bash: $TAR_COMMAND -xf ./drop.tar
+  - bash: rm ./drop.tar
   - template: steps/show-disk-usage.yml
   - bash: |
       export PATH=$PATH:$HOME/.local/bin:$HOME/Library/Python/2.7/bin/
