--- a/.azure-pipelines/auto.fanout.yml
+++ b/.azure-pipelines/auto.fanout.yml
@@ -70,6 +70,7 @@ jobs:
   timeoutInMinutes: 600
   variables:
     TAR_COMMAND: tar
+    KEEP_STAGE: '--keep-stage 0 --keep-stage 1'
   pool:
     vmImage: 'vs2017-win2016'
   steps:
