--- a/.azure-pipelines/steps/windows.yml
+++ b/.azure-pipelines/steps/windows.yml
@@ -10,7 +10,7 @@ steps:
     )
 
 - script: |
-    set MSYS_PATH=%CD%\build\msys64
+    set MSYS_PATH=%CD%\build\tools\msys64
     choco install msys2 --params="/InstallDir:%MSYS_PATH% /NoPath" -y
     set PATH=%MSYS_PATH%\usr\bin;%PATH%
     pacman -S --noconfirm --needed base-devel ca-certificates make diffutils tar 
@@ -53,7 +53,7 @@ steps:
 # http://releases.llvm.org/7.0.0/LLVM-7.0.0-win64.exe
 - script: |
     powershell -Command "iwr -outf %TEMP%\LLVM-7.0.0-win64.exe https://s3-us-west-1.amazonaws.com/rust-lang-ci2/rust-ci-mirror/LLVM-7.0.0-win64.exe"
-    set CLANG_DIR=%CD%\build\clang-rust
+    set CLANG_DIR=%CD%\build\tools\clang-rust
     %TEMP%\LLVM-7.0.0-win64.exe /S /NCRC /D=%CLANG_DIR%
     set RUST_CONFIGURE_ARGS=%RUST_CONFIGURE_ARGS% --set llvm.clang-cl=%CLANG_DIR%\bin\clang-cl.exe
     echo ##vso[task.setvariable variable=RUST_CONFIGURE_ARGS]%RUST_CONFIGURE_ARGS%
